--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.359.0",
     "next": "14.1.4",
+    "next-safe-action": "^7.1.3",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
